Fixed margin of ul and added flex-wrap

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,5 +1,6 @@
 .header {
   font-family: monospace;
+  padding: 8;
   background: papayawhip;
   display: flex;
   justify-content: space-between;
@@ -18,12 +19,11 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
-  margin: 0;
+  margin: 8px;
   padding: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+  flex-wrap: wrap;
+  gap: 8px;
 }
 
 a {
